- Add Red Bounding Box to better track Actors